--- a/CasaWeb/casaweb/polls/templates/polls/index.html
+++ b/CasaWeb/casaweb/polls/templates/polls/index.html
@@ -6,14 +6,15 @@
     <title>Polls</title>
 </head>
 <body>
-{% if latest_question_list %}
+    <h1>Index</h1>
+    {% if latest_question_list %}
     <ul>
         {% for question in latest_question_list %}
         <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
         {% endfor %}
     </ul>
-{% else %}
+    {% else %}
     <p>No polls are available.</p>
-{% endif %}
+    {% endif %}
 </body>
 </html>
