added a static stylesheet

--- a/CasaWeb/casaweb/polls/templates/polls/index.html
+++ b/CasaWeb/casaweb/polls/templates/polls/index.html
@@ -4,6 +4,8 @@
     <!-- TODO: implement common header and nav through template inheritance -->
     <meta charset="UTF-8">
     <title>Polls</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'polls/style.css' %}">
 </head>
 <body>
     <h1>Index</h1>
