--- a/CasaWeb/casaweb/home/templates/home/home.html
+++ b/CasaWeb/casaweb/home/templates/home/home.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
+{% extends "home/main.html" %}
+
+{% block title %}
+Home Page Title
+{% endblock %}
+
+{% block content %}
 <h1>Home Page</h1>
-</body>
-</html>
+{% endblock %}
