--- a/CasaWeb/casaweb/polls/templates/polls/results.html
+++ b/CasaWeb/casaweb/polls/templates/polls/results.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Results</title>
-</head>
-<body>
-    <h1>Results</h1>
-    <p>
-        <a href="{% url 'polls:index' %}">Back to all current polls</a>
-    </p>
-    <h1>{{ question.question_text }}</h1>
-    <ul>
-        {% for choice in question.choice_set.all %}
-        <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
-</body>
-</html>
+{% extends "home/main.html" %}
+
+{% block title %}
+Poll Results
+{% endblock %}
+
+{% block content %}
+<h1>Results</h1>
+<p>
+  <a href="{% url 'polls:index' %}">Back to all current polls</a>
+</p>
+<h1>{{ question.question_text }}</h1>
+<ul>
+  {% for choice in question.choice_set.all %}
+  <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+  {% endfor %}
+</ul>
+<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+{% endblock %}
