updated templates to use common navbar

--- a/CasaWeb/casaweb/home/templates/home/main.html
+++ b/CasaWeb/casaweb/home/templates/home/main.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <section class="section">
+  {% include "home/navbar.html" %}
   <div class="container">
     {% block content %}Content{% endblock %}
   </div>
