--- a/CasaWeb/casaweb/polls/templates/polls/detail.html
+++ b/CasaWeb/casaweb/polls/templates/polls/detail.html
@@ -5,7 +5,7 @@ Poll Details
 {% endblock %}
 
 {% block content %}
-<h1>Detail</h1>
+<h1 class="is-size-2">Poll Detail</h1>
 <p>
   <a href="{% url 'polls:index' %}">Back to all current polls</a>
 </p>
