--- a/CasaWeb/casaweb/polls/templates/polls/index.html
+++ b/CasaWeb/casaweb/polls/templates/polls/index.html
@@ -5,7 +5,7 @@ Polls Index
 {% endblock %}
 
 {% block content %}
-<h1>Index</h1>
+<h1 class="is-size-2">Polls Index</h1>
 {% if latest_question_list %}
 <ul>
   {% for question in latest_question_list %}
