--- a/CasaWeb/casaweb/polls/templates/polls/results.html
+++ b/CasaWeb/casaweb/polls/templates/polls/results.html
@@ -5,11 +5,11 @@ Poll Results
 {% endblock %}
 
 {% block content %}
-<h1>Results</h1>
+<h1 class="is-size-2">PollsResults</h1>
 <p>
   <a href="{% url 'polls:index' %}">Back to all current polls</a>
 </p>
-<h1>{{ question.question_text }}</h1>
+<h1 class="is-size-1">{{ question.question_text }}</h1>
 <ul>
   {% for choice in question.choice_set.all %}
   <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
