--- a/CasaWeb/casaweb/polls/templates/polls/detail.html
+++ b/CasaWeb/casaweb/polls/templates/polls/detail.html
@@ -1,8 +1,8 @@
-{% extends "home/main.html" %}
+{% extends "base.html" %}
 
 {% block title %}
 Poll Details
-{% endblock %}
+{% endblock title %}
 
 {% block content %}
 <h1 class="is-size-2">Poll Detail</h1>
@@ -23,4 +23,4 @@ Poll Details
   </fieldset>
   <input type="submit" value="Vote">
 </form>
-{% endblock %}
+{% endblock content %}
