--- a/CasaWeb/casaweb/templates/navbar.html
+++ b/CasaWeb/casaweb/templates/navbar.html
@@ -1,37 +1,30 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{% url 'home:home' %}">
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      <!--<img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">-->
+      <strong class="is-size-5">CasaWeb</strong>
     </a>
-
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
   </div>
-
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" href="{% url 'home:home' %}">
         Home
       </a>
-
       <a class="navbar-item" href="{% url 'polls:index' %}">
         Polls
       </a>
-
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           More
         </a>
-
         <div class="navbar-dropdown">
           <a class="navbar-item">
             About
-          </a>
-          <a class="navbar-item">
-            Jobs
           </a>
           <a class="navbar-item">
             Contact
@@ -43,7 +36,6 @@
         </div>
       </div>
     </div>
-
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
