--- a/CasaWeb/casaweb/templates/navbar.html
+++ b/CasaWeb/casaweb/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{% url 'home:home' %}">
+    <a class="navbar-item" href="{% url 'home:index' %}">
       <!--<img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">-->
       <strong class="is-size-5">CasaWeb</strong>
     </a>
@@ -12,8 +12,11 @@
   </div>
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="{% url 'home:home' %}">
+      <a class="navbar-item" href="{% url 'home:index' %}">
         Home
+      </a>
+      <a class="navbar-item" href="{% url 'blog:index' %}">
+        Blog
       </a>
       <a class="navbar-item" href="{% url 'polls:index' %}">
         Polls
