--- a/CasaWeb/casaweb/blog/templates/blog/index.html
+++ b/CasaWeb/casaweb/blog/templates/blog/index.html
@@ -5,5 +5,26 @@ Blog
 {% endblock title %}
 
 {% block content %}
-<h1 class="is-size-2">Blog</h1>
+<nav class="level">
+  <!-- Left side -->
+  <div class="level-left">
+    <div class="level-item">
+      <h1 class="is-size-2">Blog</h1>
+    </div>
+  </div>
+  <!-- Right side -->
+  <div class="level-right">
+    <p class="level-item">
+      <a class="button is-primary is-outlined" href="{% url 'blog:create' %}">Create New Entry</a>
+    </p>
+  </div>
+</nav>
+
+<ul>
+  {% for entry in entries %}
+  <li>
+    <a href="{% url 'blog:details' entry.id %}">{{ entry.title }}</a> - by {{ entry.author }} on {{ entry.created }}
+  </li>
+  {% endfor %}
+</ul>
 {% endblock content %}
