--- a/CasaWeb/casaweb/templates/admin/base_site.html
+++ b/CasaWeb/casaweb/templates/admin/base_site.html
@@ -1,9 +1,11 @@
 {% extends "admin/base.html" %}
 
-{% block title %}{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
+{% block title %}
+{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | {{ site_title|default:_('Django site admin') }}
+{% endblock title%}
 
 {% block branding %}
 <h1 id="site-name"><a href="{% url 'admin:index' %}">CasaWeb Admin</a></h1>
-{% endblock %}
+{% endblock branding %}
 
-{% block nav-global %}{% endblock %}
+{% block nav-global %}{% endblock nav-global %}
