--- a/CasaWeb/casaweb/templates/navbar.html
+++ b/CasaWeb/casaweb/templates/navbar.html
@@ -36,6 +36,9 @@
           <a class="navbar-item">
             Report an issue
           </a>
+          <a class="navbar-item" href="{% url 'admin:index' %}">
+            Admin
+          </a>
         </div>
       </div>
     </div>
