--- a/CasaWeb/casaweb/home/templates/home/index.html
+++ b/CasaWeb/casaweb/home/templates/home/index.html
@@ -6,5 +6,5 @@ Home Page Title
 
 {% block content %}
 <h1 class="is-size-2">Home Page</h1>
-<p>This is the main landing page.</p>
+<p>Welcome to this website.</p>
 {% endblock content %}
