--- a/CasaWeb/casaweb/templates/navbar.html
+++ b/CasaWeb/casaweb/templates/navbar.html
@@ -1,7 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{% url 'home:home' %}">
-      <!--<img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">-->
       <strong class="is-size-5">CasaWeb</strong>
     </a>
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -39,10 +38,10 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
+          <a class="button is-primary" href="{% url 'home:signup' %}">
             <strong>Sign up</strong>
           </a>
-          <a class="button is-light">
+          <a class="button" href="{% url 'home:login' %}">
             Log in
           </a>
         </div>
