--- a/CasaWeb/casaweb/templates/navbar.html
+++ b/CasaWeb/casaweb/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{% url 'home:home' %}">
+    <a class="navbar-item" href="{% url 'home:index' %}">
       <strong class="is-size-5">CasaWeb</strong>
     </a>
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -11,7 +11,7 @@
   </div>
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="{% url 'home:home' %}">
+      <a class="navbar-item" href="{% url 'home:index' %}">
         Home
       </a>
       <a class="navbar-item" href="{% url 'polls:index' %}">
@@ -38,12 +38,21 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
+          {% if request.user.is_authenticated %}
+          <a class="button" href="#">
+              <strong>{{ request.user.username }}</strong>
+          </a>
+          <a class="button is-danger" href="{% url 'home:logout' %}">
+            Log out
+          </a>
+          {% else %}
           <a class="button is-primary" href="{% url 'home:signup' %}">
             <strong>Sign up</strong>
           </a>
           <a class="button" href="{% url 'home:login' %}">
             Log in
           </a>
+          {% endif %}
         </div>
       </div>
     </div>
