--- a/CasaWeb/casaweb/home/templates/home/signup.html
+++ b/CasaWeb/casaweb/home/templates/home/signup.html
@@ -6,7 +6,31 @@ Sign Up
 
 {% block content %}
 <h1 class="is-size-2">Sign Up</h1>
-<!-- Implement signup form and user signup -->
-<p>This is the signup page.</p>
-<p><small>Already signed up? <a href="{% url 'home:login' %}">Login</a> instead.</small></p>
+<form action="" method="POST">
+  {% csrf_token %}
+  <div class="field">
+    <label class="label" for="username">Username</label>
+    <div class="control">
+      <input class="input" type="text" id="username" name="username" required />
+    </div>
+  </div>
+  <div class="field">
+    <label class="label" for="password1">Password</label>
+    <div class="control">
+      <input class="input" type="password" id="password1" name="password1" required />
+    </div>
+  </div>
+  <div class="field">
+    <label class="label" for="password2">Confirm Password</label>
+    <div class="control">
+      <input class="input" type="password" id="password2" name="password2" required />
+    </div>
+  </div>
+  <div class="field is-grouped is-grouped-right">
+    <div class="control">
+      <button class="button is-primary" type="submit">Sign up</button>
+    </div>
+  </div>
+</form>
+<p class="has-text-centered"><small>Already signed up? <a href="{% url 'home:login' %}">Login</a> instead.</small></p>
 {% endblock content %}
