--- a/CasaWeb/casaweb/home/templates/home/about.html
+++ b/CasaWeb/casaweb/home/templates/home/about.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}
-Home Page Title
+About
 {% endblock title %}
 
 {% block content %}
-<h1 class="is-size-2">Home Page</h1>
-<p>Welcome to this website!</p>
+<h1 class="is-size-2">About</h1>
+<p>This is the about page.</p>
 {% endblock content %}
