--- a/CasaWeb/casaweb/templates/navbar.html
+++ b/CasaWeb/casaweb/templates/navbar.html
@@ -22,14 +22,14 @@
           More
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item">
+          <a class="navbar-item" href="{% url 'home:about' %}">
             About
           </a>
-          <a class="navbar-item">
+          <a class="navbar-item" href="{% url 'home:contact' %}">
             Contact
           </a>
           <hr class="navbar-divider">
-          <a class="navbar-item">
+          <a class="navbar-item" href="{% url 'home:issue' %}">
             Report an issue
           </a>
         </div>
