--- a/CasaWeb/casaweb/home/templates/home/login.html
+++ b/CasaWeb/casaweb/home/templates/home/login.html
@@ -1,30 +1,26 @@
 {% extends "base.html" %}
-
 {% block title %}
-Log In
+  Log In
 {% endblock title %}
-
 {% block content %}
-<h1 class="is-size-2">Log In</h1>
-<form action="" method="POST">
-  {% csrf_token %}
-  <div class="field">
-    <label class="label" for="username">Username</label>
-    <div class="control">
-      <input class="input" type="text" id="username" name="username" required/>
+  <h1 class="is-size-2">Log In</h1>
+  <form action="" method="post">
+    {% csrf_token %}
+    <div class="field">
+      <label class="label" for="username">Username</label>
+      <div class="control">
+        <input class="input" type="text" id="username" name="username" required/>
+      </div>
     </div>
-  </div>
-  <div class="field">
-    <label class="label" for="password">Password</label>
-    <div class="control">
-      <input class="input" type="password" id="password" name="password" required/>
+    <div class="field">
+      <label class="label" for="password">Password</label>
+      <div class="control">
+        <input class="input" type="password" id="password" name="password" required/>
+      </div>
     </div>
-  </div>
-  <div class="field is-grouped is-grouped-right">
-    <div class="control">
-      <button class="button is-primary" type="submit">Log in</button>
-    </div>
-  </div>
-</form>
-<p class="has-text-centered"><small>Not registered yet? <a href="{% url 'home:signup' %}">Sign up</a> here.</small></p>
+    <button class="button is-primary" type="submit">Log in</button>
+  </form>
+  <p class="has-text-centered">
+    <small>Not registered yet? <a href="{% url 'home:signup' %}">Sign up</a> here.</small>
+  </p>
 {% endblock content %}
